--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,32 +1,54 @@
 .hero {
-  padding-top: 200px;
-  padding-bottom: 200px;  
-  background-color: $main-background-color;
+  padding-top: 118px;
+  padding-bottom: 118px;
   text-align: center;
+  background-color: $main-background-color;
+
+
+  @media screen and (min-width:768px) {
+    padding-top: 200px;
+    padding-bottom: 200px;    
+  }
   &--overlay {
-    max-width: 1600px;
-    height: 600px;
+    max-width: 480px;
+    max-height: 400px;
     margin-left: auto;
     margin-right: auto;
     background-image: linear-gradient(to right,
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)),
-      url('../images/bg.jpg');
+      url('../images/bg-mob.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+
+    @media screen and (min-width:768px) {
+      max-width: 1600px;
+      max-height: 600px;
+      background-image: linear-gradient(to right,
+            rgba(47, 48, 58, 0.4),
+            rgba(47, 48, 58, 0.4)),
+          url('../images/bg.jpg');
+    }
   }
 }
 
 .hero__title {  
-  width: 696px;
+  width: 360px;
+  font-weight: 900;
+  font-size: 26px;
+  line-height: calc(42px / 26px);  
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
   margin-right: auto;
   margin-left: auto;
   margin-bottom: 30px;
   color: $main-white-color;  
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;  
-  letter-spacing: 0.06em;
-  text-transform: uppercase;
+   
+  
+  @media screen and (min-width:768px) {
+    width: 696px;
+    font-size: 44px;
+    line-height: 1.36;
+  }
 }
