--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -1,9 +1,13 @@
 .features-list {
-  display: flex;
-  gap: 30px;
+  @media screen and (min-width:768px) {
+    display: flex;
+    gap: 30px;
+    flex-wrap:wrap;
+  }  
 }
 
 .features-list__item {
+  
   &:nth-child(1)::before {
       background-image: url('../images/icons/features-1.svg');
     }
@@ -26,15 +30,25 @@
     background-position: center;
     background-repeat: no-repeat;
   }
+  @media screen and (min-width:768px) {
+    width: calc((100% - 2 * 30px) / 2);
+  }
+  @media screen and (min-width:1200px) {
+    width: 270px;
+  }
 }
 
 .features-list__title {
+  text-align: center;
   margin-bottom: 10px;
   color: $title-color;
   font-size: 14px;
   font-weight: 700;
   line-height: 1.14;
   text-transform: uppercase;
+  @media screen and (min-width:768px) {
+    text-align: left;
+  }
 }
 
 .features-list__descr {
