--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -5,7 +5,7 @@
   background-color: $main-background-color;
 
 
-  @media screen and (min-width:768px) {
+  @media screen and (min-width: 1200px) {
     padding-top: 200px;
     padding-bottom: 200px;    
   }
@@ -23,12 +23,20 @@
     background-position: center;
 
     @media screen and (min-width:768px) {
-      max-width: 1600px;
-      max-height: 600px;
+      max-width: 768px;
+      max-height: 400px;
       background-image: linear-gradient(to right,
             rgba(47, 48, 58, 0.4),
             rgba(47, 48, 58, 0.4)),
-          url('../images/bg.jpg');
+          url('../images/bg-tablet.jpg');
+    }
+    @media screen and (min-width:1200px) {
+      max-width: 1600px;
+      max-height: 600px;
+      background-image: linear-gradient(to right,
+          rgba(47, 48, 58, 0.4),
+          rgba(47, 48, 58, 0.4)),
+        url('../images/bg.jpg');
     }
   }
 }
@@ -46,7 +54,7 @@
   color: $main-white-color;  
    
   
-  @media screen and (min-width:768px) {
+  @media screen and (min-width: 1200px) {
     width: 696px;
     font-size: 44px;
     line-height: 1.36;
