--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -38,6 +38,13 @@
   }
 }
 
+.features-list__item:not(:last-child) {
+  @media screen and (max-width:768px) {
+    margin-bottom: 30px;
+  }
+  
+}
+
 .features-list__title {
   text-align: center;
   margin-bottom: 10px;
