--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -1,16 +1,16 @@
-.hero__btn { 
-  @include button();   
+.hero__btn {
+  @include button();
   font-weight: 700;
   line-height: 1.87;
-  letter-spacing: 0.06em; 
-  @media screen and (min-width:768px) {
+  letter-spacing: 0.06em;
+  @media screen and (min-width: 768px) {
     @include button(216px);
   }
 }
 
 .form-signup__btn {
   @include button();
-  margin-left: 12px;
+
   &::after {
     content: '';
     width: 24px;
@@ -18,11 +18,14 @@
     margin-left: 10px;
     background-image: url('../images/icons/send.svg');
   }
+  @media screen and(max-width:1200px) {
+    margin-left: 12px;
+  }
 }
 
 .modal-form__btn {
   @include button(216px);
-  display: block;  
+  display: block;
   margin-top: 30px;
   margin-left: auto;
   margin-right: auto;
@@ -41,12 +44,13 @@
   &:focus {
     background-color: $accent-color;
     color: $main-white-color;
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+      0px 2px 2px rgba(0, 0, 0, 0.12);
   }
 }
 
 .buttons-list {
   @include flex(flex, center, center);
-  margin-bottom: 50px;  
+  margin-bottom: 50px;
   gap: 8px;
 }
