--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,22 +1,31 @@
 .clients {
-  display: flex;
+  @include flex(flex, center, center);
+  flex-wrap: wrap;
   gap: 30px;
 }
 
 .clients__item {
-  @include size(170px, 92px);  
+  height: 92px;
+  @media screen and (min-width: 480px) {
+    width: calc((100% - 30px) / 2);
+  }
+  @media screen and (min-width: 768px) {
+    width: calc((100% - 60px) / 3);
+  }
+  @media screen and (min-width: 1200px) {
+    width: 170px;
+  }
 }
-
 .clients__link {
   @include flex(inline-flex, center, center);
   @include size(100%, 100%);
   fill: $icon-color;
-  @include border($icon-color);  
+  @include border($icon-color);
   border-radius: 4px;
-    transition: fill 250ms $timing-function, border 250ms $timing-function;
+  transition: fill 250ms $timing-function, border 250ms $timing-function;
   &:hover,
   &:focus {
     fill: $accent-color;
-    @include border($accent-color);    
+    @include border($accent-color);
   }
 }
