--- a/sass/components/_footer-form.scss
+++ b/sass/components/_footer-form.scss
@@ -1,17 +1,25 @@
 .page-footer__form {
-  margin-left: auto;
+  @media screen and (min-width: 1200px) {
+    margin-left: auto;
+  }
+}
+
+.form-signup__label {
+  display: block;
+  margin-bottom: 20px;
 }
 
 .form-signup__input {
-  width: 358px;  
+  max-width: 450px;
+  width: 100%;
   padding-top: 15px;
   padding-bottom: 15px;
   padding-left: 16px;
   font-family: inherit;
-  color: $main-white-color;  
+  color: $main-white-color;
   font-size: 16px;
   line-height: 1.25;
-  @include border($footer-form-color);  
+  @include border($footer-form-color);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   background-color: transparent;
