--- a/sass/components/_footer-social.scss
+++ b/sass/components/_footer-social.scss
@@ -1,5 +1,7 @@
 .page-footer__social {
-  margin-left: 70px;
+  @media screen and (min-width: 768px) {
+    margin-left: 70px;
+  }
 }
 
 .social-list {
