--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -4,56 +4,71 @@
   text-align: center;
   background-color: $main-background-color;
 
-
   @media screen and (min-width: 1200px) {
     padding-top: 200px;
-    padding-bottom: 200px;    
+    padding-bottom: 200px;
   }
   &--overlay {
-    max-width: 480px;
-    max-height: 400px;
+    max-width: 1600px;
     margin-left: auto;
     margin-right: auto;
-    background-image: linear-gradient(to right,
-      rgba(47, 48, 58, 0.4),
-      rgba(47, 48, 58, 0.4)),
-      url('../images/bg-mob.jpg');
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url('../images/bg/mob/bg-mob.jpg');
     background-repeat: no-repeat;
+    background-size: 480px 400px;
     background-size: cover;
     background-position: center;
 
-    @media screen and (min-width:768px) {
-      max-width: 768px;
-      max-height: 400px;
-      background-image: linear-gradient(to right,
-            rgba(47, 48, 58, 0.4),
-            rgba(47, 48, 58, 0.4)),
-          url('../images/bg-tablet.jpg');
+    @media (min-device-pixel-ratio: 2),
+      (-webkit-min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+        url('../images/bg/mob/bg-mob@2x.jpg');
     }
-    @media screen and (min-width:1200px) {
-      max-width: 1600px;
-      max-height: 600px;
-      background-image: linear-gradient(to right,
-          rgba(47, 48, 58, 0.4),
-          rgba(47, 48, 58, 0.4)),
-        url('../images/bg.jpg');
+
+    @media screen and (min-width: 481px) {
+      background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+        url('../images/bg/tablet/bg-tablet.jpg');
+
+      @media (min-device-pixel-ratio: 2),
+        (-webkit-min-device-pixel-ratio: 2),
+        (min-resolution: 192dpi),
+        (min-resolution: 2dppx) {
+        background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+          url('../images/bg/tablet/bg-tablet@2x.jpg');
+      }
+    }
+
+    @media screen and (min-width: 769px) {
+      background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+        url('../images/bg/desktop/bg-desk.jpg');
+
+      @media (min-device-pixel-ratio: 2),
+        (-webkit-min-device-pixel-ratio: 2),
+        (min-resolution: 192dpi),
+        (min-resolution: 2dppx) {
+        & {
+          background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+            url('../images/bg/desktop/bg-desk@2x.jpg');
+        }
+      }
     }
   }
 }
 
-.hero__title {  
-  width: 360px;
+.hero__title {
+  max-width: 360px;
   font-weight: 900;
   font-size: 26px;
-  line-height: calc(42px / 26px);  
+  line-height: calc(42px / 26px);
   letter-spacing: 0.06em;
   text-transform: uppercase;
   margin-right: auto;
   margin-left: auto;
   margin-bottom: 30px;
-  color: $main-white-color;  
-   
-  
+  color: $main-white-color;
+
   @media screen and (min-width: 1200px) {
     width: 696px;
     font-size: 44px;
