--- a/sass/components/_section.scss
+++ b/sass/components/_section.scss
@@ -1,6 +1,11 @@
 .section {
   padding-top: 60px;
   padding-bottom: 60px;
+  &--no-pb {
+    @media screen and (min-width:1200px) {
+      padding-bottom: 0;
+    }    
+  }
   &--grey {
     background-color: $minor-background-color;
   }
@@ -16,15 +21,13 @@
 }
 
 .section__title {
-  margin-bottom: 50px;
+  margin-bottom: 30px;
   color: $title-color;
   font-weight: 700;
-  font-size: 36px;
-  text-align: center;
-  line-height: 1.16;
-  &--no-pb {
-    padding-bottom: 0;
-  }
+  font-size: 28px;
+  line-height: calc(33px / 28px);  
+  text-align: center;  
+  
   &--hidden {
     position: absolute;
     white-space: nowrap;
@@ -35,6 +38,10 @@
     clip: rect(0 0 0 0);
     clip-path: inset(50%);
     margin: -1px;
+  }
+  @media screen and (min-width:1200px) {
+    margin-bottom: 50px;
+    font-size: 36px;    
   }
 }
 
