--- a/css/main.css
+++ b/css/main.css
@@ -716,12 +716,15 @@ ul {
 @media screen and (min-width: 768px) {
   .workers-list {
     display: flex;
+    flex-wrap: wrap;
     gap: 30px;
   }
 }
 
 .workers-list__item {
   max-width: 450px;
+  max-height: 622px;
+  height: 100%;
   text-align: center;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
   border-radius: 0px 0px 4px 4px;
@@ -729,12 +732,18 @@ ul {
 }
 @media screen and (min-width: 768px) {
   .workers-list__item {
-    width: calc((100% - 60px) / 2);
+    width: calc((100% - 30px) / 2);
   }
 }
 @media screen and (min-width: 1200px) {
   .workers-list__item {
     width: 270px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .workers-list__item:not(:last-child) {
+    margin-bottom: 30px;
   }
 }
 
@@ -754,11 +763,11 @@ ul {
   align-items: center;
   justify-content: center;
   gap: 10px;
-  margin-bottom: 24px;
+  padding-bottom: 24px;
 }
 @media screen and (min-width: 1200px) {
   .workers-social {
-    margin-bottom: 30px;
+    padding-bottom: 30px;
   }
 }
 
