--- a/css/main.css
+++ b/css/main.css
@@ -80,13 +80,11 @@ ul {
 .menu-container {
   display: none;
   position: absolute;
-  top: 99%;
+  top: 100%;
   left: 0%;
-  width: 101%;
+  width: 100%;
   background-color: #FFFFFF;
-  padding-top: 48px;
-  padding-bottom: 48px;
-  padding-left: 40px;
+  padding: 48px 40px;
 }
 .menu-container.is-open {
   display: block;
@@ -137,6 +135,7 @@ ul {
 @media screen and (max-width: 767px) {
   .network {
     display: flex;
+    flex-wrap: wrap;
     margin-top: 64px;
     gap: 20px;
   }
@@ -407,6 +406,7 @@ ul {
   border-radius: 4px;
   border: none;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding: 10px 28px;
 }
 .form-signup__btn:hover, .form-signup__btn:focus {
   background-color: #2196F3;
@@ -420,7 +420,7 @@ ul {
   margin-left: 10px;
   background-image: url("../images/icons/send.svg");
 }
-@media screen and (max-width: 1200px) {
+@media screen and (min-width: 1200px) {
   .form-signup__btn {
     margin-left: 12px;
   }
@@ -513,7 +513,7 @@ ul {
   max-width: 1600px;
   margin-left: auto;
   margin-right: auto;
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/bg/mob/bg-mob.jpg");
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/bg/bg-s.jpg");
   background-repeat: no-repeat;
   background-size: 480px 400px;
   background-size: cover;
@@ -521,27 +521,27 @@ ul {
 }
 @media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
   .hero--overlay {
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/bg/mob/bg-mob@2x.jpg");
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/bg/bg-s@2x.jpg");
   }
 }
 @media screen and (min-width: 481px) {
   .hero--overlay {
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/bg/tablet/bg-tablet.jpg");
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/bg/bg-m.jpg");
   }
 }
 @media screen and (min-width: 481px) and (min-device-pixel-ratio: 2), screen and (min-width: 481px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 481px) and (min-resolution: 192dpi), screen and (min-width: 481px) and (min-resolution: 2dppx) {
   .hero--overlay {
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/bg/tablet/bg-tablet@2x.jpg");
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/bg/bg-m@2x.jpg");
   }
 }
 @media screen and (min-width: 769px) {
   .hero--overlay {
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/bg/desktop/bg-desk.jpg");
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/bg/bg-l.jpg");
   }
 }
 @media screen and (min-width: 769px) and (min-device-pixel-ratio: 2), screen and (min-width: 769px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 769px) and (min-resolution: 192dpi), screen and (min-width: 769px) and (min-resolution: 2dppx) {
   .hero--overlay {
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/bg/desktop/bg-desk@2x.jpg");
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/bg/bg-l@2x.jpg");
   }
 }
 
@@ -559,7 +559,7 @@ ul {
 }
 @media screen and (min-width: 1200px) {
   .hero__title {
-    width: 696px;
+    max-width: 696px;
     font-size: 44px;
     line-height: 1.36;
   }
@@ -619,6 +619,8 @@ ul {
 @media screen and (min-width: 768px) {
   .features-list {
     display: flex;
+    align-items: center;
+    justify-content: center;
     gap: 30px;
     flex-wrap: wrap;
   }
@@ -914,7 +916,11 @@ ul {
   padding-top: 60px;
   padding-bottom: 60px;
   background-color: #2F303A;
-  text-align: center;
+}
+@media screen and (max-width: 1200px) {
+  .page-footer {
+    text-align: center;
+  }
 }
 
 .wrapper {
@@ -922,6 +928,21 @@ ul {
   flex-direction: column;
   gap: 60px;
 }
+@media screen and (min-width: 768px) {
+  .wrapper {
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: baseline;
+    justify-content: center;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .wrapper {
+    gap: 0;
+    flex-wrap: nowrap;
+  }
+}
+
 .page-footer__title {
   margin-bottom: 20px;
   font-weight: 700;
@@ -986,15 +1007,22 @@ ul {
   fill: #FFFFFF;
 }
 
+@media screen and (min-width: 768px) and (max-width: 1200px) {
+  .page-footer__form {
+    width: 450px;
+  }
+}
 @media screen and (min-width: 1200px) {
   .page-footer__form {
     margin-left: auto;
   }
 }
 
-.form-signup__label {
-  display: block;
-  margin-bottom: 20px;
+@media screen and (max-width: 1200px) {
+  .form-signup__label {
+    display: block;
+    margin-bottom: 20px;
+  }
 }
 
 .form-signup__input {
@@ -1011,6 +1039,11 @@ ul {
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   background-color: transparent;
+}
+@media screen and (min-width: 1200px) {
+  .form-signup__input {
+    width: 358px;
+  }
 }
 
 .backdrop {
