--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -10,7 +10,7 @@
 
 .form-signup__btn {
   @include button();
-
+  padding: 10px 28px;
   &::after {
     content: '';
     width: 24px;
@@ -18,7 +18,7 @@
     margin-left: 10px;
     background-image: url('../images/icons/send.svg');
   }
-  @media screen and(max-width:1200px) {
+  @media screen and(min-width:1200px) {
     margin-left: 12px;
   }
 }
