--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -1,16 +1,15 @@
 .features-list {
-  @media screen and (min-width:768px) {
-    display: flex;
+  @media screen and (min-width: 768px) {
+    @include flex(flex, center, center);
     gap: 30px;
-    flex-wrap:wrap;
-  }  
+    flex-wrap: wrap;
+  }
 }
 
 .features-list__item {
-  
   &:nth-child(1)::before {
-      background-image: url('../images/icons/features-1.svg');
-    }
+    background-image: url('../images/icons/features-1.svg');
+  }
   &:nth-child(2)::before {
     background-image: url('../images/icons/features-2.svg');
   }
@@ -30,19 +29,18 @@
     background-position: center;
     background-repeat: no-repeat;
   }
-  @media screen and (min-width:768px) {
+  @media screen and (min-width: 768px) {
     width: calc((100% - 2 * 30px) / 2);
   }
-  @media screen and (min-width:1200px) {
+  @media screen and (min-width: 1200px) {
     width: 270px;
   }
 }
 
 .features-list__item:not(:last-child) {
-  @media screen and (max-width:768px) {
+  @media screen and (max-width: 768px) {
     margin-bottom: 30px;
   }
-  
 }
 
 .features-list__title {
@@ -53,7 +51,7 @@
   font-weight: 700;
   line-height: 1.14;
   text-transform: uppercase;
-  @media screen and (min-width:768px) {
+  @media screen and (min-width: 768px) {
     text-align: left;
   }
 }
