--- a/sass/components/_footer-form.scss
+++ b/sass/components/_footer-form.scss
@@ -1,12 +1,17 @@
 .page-footer__form {
+  @media screen and (min-width: 768px) and (max-width: 1200px) {
+    width: 450px;
+  }
   @media screen and (min-width: 1200px) {
     margin-left: auto;
   }
 }
 
 .form-signup__label {
-  display: block;
-  margin-bottom: 20px;
+  @media screen and (max-width: 1200px) {
+    display: block;
+    margin-bottom: 20px;
+  }
 }
 
 .form-signup__input {
@@ -23,4 +28,7 @@
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   background-color: transparent;
+  @media screen and (min-width: 1200px) {
+    width: 358px;
+  }
 }
