--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -13,7 +13,7 @@
     margin-left: auto;
     margin-right: auto;
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url('../images/bg/mob/bg-mob.jpg');
+      url('../images/bg/bg-s.jpg');
     background-repeat: no-repeat;
     background-size: 480px 400px;
     background-size: cover;
@@ -24,25 +24,25 @@
       (min-resolution: 192dpi),
       (min-resolution: 2dppx) {
       background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url('../images/bg/mob/bg-mob@2x.jpg');
+        url('../images/bg/bg-s@2x.jpg');
     }
 
     @media screen and (min-width: 481px) {
       background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url('../images/bg/tablet/bg-tablet.jpg');
+        url('../images/bg/bg-m.jpg');
 
       @media (min-device-pixel-ratio: 2),
         (-webkit-min-device-pixel-ratio: 2),
         (min-resolution: 192dpi),
         (min-resolution: 2dppx) {
         background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-          url('../images/bg/tablet/bg-tablet@2x.jpg');
+          url('../images/bg/bg-m@2x.jpg');
       }
     }
 
     @media screen and (min-width: 769px) {
       background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url('../images/bg/desktop/bg-desk.jpg');
+        url('../images/bg/bg-l.jpg');
 
       @media (min-device-pixel-ratio: 2),
         (-webkit-min-device-pixel-ratio: 2),
@@ -50,7 +50,7 @@
         (min-resolution: 2dppx) {
         & {
           background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-            url('../images/bg/desktop/bg-desk@2x.jpg');
+            url('../images/bg/bg-l@2x.jpg');
         }
       }
     }
@@ -70,7 +70,7 @@
   color: $main-white-color;
 
   @media screen and (min-width: 1200px) {
-    width: 696px;
+    max-width: 696px;
     font-size: 44px;
     line-height: 1.36;
   }
