--- a/sass/components/_network.scss
+++ b/sass/components/_network.scss
@@ -1,14 +1,14 @@
 .network {
   @media screen and (max-width: 767px) {
     display: flex;
+    flex-wrap: wrap;
     margin-top: 64px;
     gap: 20px;
-    
   }
 }
 
 .network__item {
-  @media screen and (max-width: 767px) { 
+  @media screen and (max-width: 767px) {
     position: relative;
     &:not(:last-child)::after {
       content: '';
@@ -24,11 +24,11 @@
 }
 
 .network__link {
-  @media screen and (max-width: 767px) {    
+  @media screen and (max-width: 767px) {
     color: $accent-color;
     font-weight: 500;
     font-size: 18px;
     line-height: calc(22px / 18px);
-    letter-spacing: 0.02em;  
+    letter-spacing: 0.02em;
   }
 }
