--- a/css/main.css
+++ b/css/main.css
@@ -58,6 +58,7 @@ ul {
   border: none;
   border-radius: 50%;
   outline: none;
+  z-index: 1000;
 }
 
 @media (min-width: 768px) {
@@ -80,7 +81,7 @@ ul {
 .menu-container {
   display: none;
   position: absolute;
-  top: 100%;
+  top: 0;
   left: 0%;
   width: 100%;
   background-color: #FFFFFF;
@@ -88,6 +89,7 @@ ul {
 }
 .menu-container.is-open {
   display: block;
+  z-index: 999;
 }
 @media screen and (min-width: 767px) {
   .menu-container {
@@ -104,7 +106,7 @@ ul {
 }
 @media screen and (min-width: 480px) {
   .container {
-    width: 480px;
+    min-width: 480px;
   }
 }
 @media screen and (min-width: 768px) {
@@ -492,9 +494,19 @@ ul {
 .buttons-list {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
+  flex-wrap: wrap;
   margin-bottom: 50px;
-  gap: 8px;
+  column-gap: 8px;
+  row-gap: 15px;
+}
+@media screen and (min-width: 760px) {
+  .buttons-list {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 8px;
+  }
 }
 
 .hero {
@@ -841,15 +853,26 @@ ul {
   display: flex;
   flex-wrap: wrap;
 }
+@media screen and (min-width: 768px) {
+  .works-list {
+    gap: 30px;
+  }
+}
 
-.works-list__item {
-  width: calc((100% - 60px) / 3);
+@media screen and (max-width: 768px) {
+  .works-list__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
 }
-.works-list__item:not(:nth-child(3n)) {
-  margin-right: 30px;
+@media screen and (min-width: 768px) {
+  .works-list__item {
+    width: calc((100% - 30px) / 2);
+  }
 }
-.works-list__item:not(:nth-last-child(-n+3)) {
-  margin-bottom: 30px;
+@media screen and (min-width: 1200px) {
+  .works-list__item {
+    width: calc((100% - 60px) / 3);
+  }
 }
 
 .works-list__link {
@@ -895,6 +918,12 @@ ul {
   border-right: 1px solid #EEEEEE;
   border-bottom: 1px solid #EEEEEE;
   border-left: 1px solid #EEEEEE;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1200px) {
+  .works-list__content--pb {
+    padding-bottom: 56px;
+  }
 }
 
 .works-list__title {
