--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -1,11 +1,11 @@
-.container {  
+.container {
   margin: 0 auto;
   padding: 0 15px;
   &--bb {
     border-bottom: 1px solid $border-bottom-color;
   }
-  @media screen and (min-width: 480px){
-    width: 480px;
+  @media screen and (min-width: 480px) {
+    min-width: 480px;
   }
   @media screen and (min-width: 768px) {
     width: 768px;
@@ -13,5 +13,4 @@
   @media screen and (min-width: 1200px) {
     width: 1200px;
   }
-
 }
