--- a/sass/components/_works.scss
+++ b/sass/components/_works.scss
@@ -1,25 +1,32 @@
 .works-list {
   display: flex;
   flex-wrap: wrap;
+  @media screen and (min-width: 768px) {
+    gap: 30px;
+  }
 }
 
 .works-list__item {
-  width: calc((100% - 60px) / 3);
-  &:not(:nth-child(3n)) {
-    margin-right: 30px;
+  @media screen and (max-width: 768px) {
+    &:not(:last-child) {
+      margin-bottom: 30px;
+    }
   }
-  &:not(:nth-last-child(-n+3)) {
-    margin-bottom: 30px;
+  @media screen and (min-width: 768px) {
+    width: calc((100% - 30px) / 2);
+  }
+  @media screen and (min-width: 1200px) {
+    width: calc((100% - 60px) / 3);
   }
 }
 
-.works-list__link { 
-  display: block; 
+.works-list__link {
+  display: block;
   list-style: none;
   text-decoration: none;
   overflow: hidden;
   transition: box-shadow 250ms $timing-function;
- 
+
   &:hover,
   &:focus {
     @include link-shadow();
@@ -39,7 +46,7 @@
   background-color: rgba(33, 150, 243, 0.9);
   transform: translateY(101%);
   transition: transform 250ms $timing-function;
-  
+
   .works-list__link:hover &,
   .works-list__link:focus & {
     transform: translateY(0);
@@ -61,7 +68,13 @@
   border-left: 1px solid $border-color;
 }
 
-.works-list__title {  
+.works-list__content--pb {
+  @media screen and (min-width: 768px) and (max-width: 1200px) {
+    padding-bottom: 56px;
+  }
+}
+
+.works-list__title {
   margin-bottom: 4px;
   color: $title-color;
   font-weight: 700;
@@ -70,7 +83,7 @@
   letter-spacing: 0.06em;
 }
 
-.works-list__subtitle {   
+.works-list__subtitle {
   color: $main-text-color;
   font-size: 16px;
   line-height: 1.87;
