--- a/css/main.css
+++ b/css/main.css
@@ -851,6 +851,8 @@ ul {
 
 .works-list {
   display: flex;
+  align-items: center;
+  justify-content: center;
   flex-wrap: wrap;
 }
 @media screen and (min-width: 768px) {
@@ -895,6 +897,10 @@ ul {
   position: absolute;
   top: 0;
   left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 24px;
   width: 100%;
   height: 100%;
   background-color: rgba(33, 150, 243, 0.9);
@@ -907,10 +913,14 @@ ul {
 
 .works-list__text {
   color: #FFFFFF;
-  padding: 63px 24px;
   margin: 0;
-  font-size: 18px;
+  font-size: 16px;
   line-height: 1.55;
+}
+@media screen and (min-width: 480px) {
+  .works-list__text {
+    font-size: 18px;
+  }
 }
 
 .works-list__content {
