--- a/sass/components/_works.scss
+++ b/sass/components/_works.scss
@@ -1,5 +1,5 @@
 .works-list {
-  display: flex;
+  @include flex(flex, center, center);
   flex-wrap: wrap;
   @media screen and (min-width: 768px) {
     gap: 30px;
@@ -42,6 +42,8 @@
   position: absolute;
   top: 0;
   left: 0;
+  @include flex(flex, center, center);
+  padding: 0 24px;
   @include size(100%, 100%);
   background-color: rgba(33, 150, 243, 0.9);
   transform: translateY(101%);
@@ -55,10 +57,12 @@
 
 .works-list__text {
   color: $main-white-color;
-  padding: 63px 24px;
   margin: 0;
-  font-size: 18px;
+  font-size: 16px;
   line-height: 1.55;
+  @media screen and (min-width: 480px) {
+    font-size: 18px;
+  }
 }
 
 .works-list__content {
