--- a/css/main.css
+++ b/css/main.css
@@ -1110,12 +1110,23 @@ ul {
   position: absolute;
   top: 50%;
   left: 50%;
-  min-width: 528px;
-  min-height: 581px;
+  width: 85%;
   padding: 38px 40px 40px 40px;
   background-color: #FFFFFF;
   transform: translate(-50%, -50%) scale(1);
   transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (min-width: 480px) {
+  .modal {
+    max-width: 450px;
+    min-height: 609px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .modal {
+    max-width: 528px;
+    min-height: 581px;
+  }
 }
 
 .modal__close {
@@ -1151,10 +1162,21 @@ ul {
 }
 
 .modal-form {
-  width: 448px;
+  max-width: 370px;
+  width: 100%;
   margin-top: 12px;
   margin-left: auto;
   margin-right: auto;
+}
+@media screen and (min-width: 480px) {
+  .modal-form {
+    max-width: 370px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .modal-form {
+    max-width: 448px;
+  }
 }
 
 .modal-form__section {
@@ -1173,6 +1195,14 @@ ul {
   display: flex;
   align-items: center;
   justify-content: center;
+  font-size: 12px;
+  line-height: 1.1666666667;
+}
+@media screen and (min-width: 1200px) {
+  .modal-form__label--checkbox {
+    font-size: 14px;
+    line-height: 1.7142857143;
+  }
 }
 
 .modal-form__wrapper {
