--- a/css/main.css
+++ b/css/main.css
@@ -432,7 +432,7 @@ ul {
   display: inline-flex;
   justify-content: center;
   align-items: center;
-  width: 216px;
+  width: 215px;
   height: 50px;
   padding: 0;
   background-color: #2196F3;
@@ -454,6 +454,34 @@ ul {
   background-color: #2196F3;
   color: #FFFFFF;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+@media screen and (max-width: 480px) {
+  .modal-form__btn {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 194px;
+    height: 50px;
+    padding: 0;
+    background-color: #2196F3;
+    color: #FFFFFF;
+    font-family: inherit;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.62;
+    cursor: pointer;
+    border-radius: 4px;
+    border: none;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .modal-form__btn:hover, .modal-form__btn:focus {
+    background-color: #2196F3;
+    color: #FFFFFF;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+  }
 }
 .modal-form__btn:hover, .modal-form__btn:focus {
   background-color: #188CE8;
@@ -1186,6 +1214,18 @@ ul {
 }
 .modal-form__section--center {
   text-align: center;
+  max-width: 300px;
+  width: 100%;
+}
+@media screen and (min-width: 480px) {
+  .modal-form__section--center {
+    max-width: 370px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .modal-form__section--center {
+    max-width: 448px;
+  }
 }
 
 .modal-form__label {
