--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -18,6 +18,14 @@
   margin-bottom: 10px;
   &--center {
     text-align: center;
+    max-width: 300px;
+    width: 100%;
+    @media screen and (min-width: 480px) {
+      max-width: 370px;
+    }
+    @media screen and (min-width: 768px) {
+      max-width: 448px;
+    }
   }
 }
 
