--- a/css/main.css
+++ b/css/main.css
@@ -1121,6 +1121,7 @@ ul {
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 1000;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
@@ -1142,15 +1143,17 @@ ul {
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 85%;
-  padding: 38px 40px 40px 40px;
+  padding: 40px;
   background-color: #FFFFFF;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
   transform: translate(-50%, -50%) scale(1);
   transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 @media screen and (min-width: 480px) {
   .modal {
     max-width: 450px;
+    width: 100%;
     min-height: 609px;
   }
 }
@@ -1344,7 +1347,7 @@ ul {
   content: "";
   position: absolute;
   left: 0;
-  bottom: 4px;
+  bottom: 0;
   width: 100%;
   height: 1px;
   background-color: #2196F3;
