--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -2,7 +2,7 @@
   position: fixed;
   top: 0;
   left: 0;
-
+  z-index: 1000;
   @include size(100%, 100%);
   background-color: rgba(0, 0, 0, 0.2);
   opacity: 1;
@@ -23,14 +23,17 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 85%;
-  padding: 38px 40px 40px 40px;
+  padding: 40px;
   background-color: $main-white-color;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
 
   transform: translate(-50%, -50%) scale(1);
   transition: transform 500ms $timing-function;
   @media screen and (min-width: 480px) {
     max-width: 450px;
+    width: 100%;
     min-height: 609px;
   }
   @media screen and (min-width: 768px) {
