--- a/sass/components/_workers.scss
+++ b/sass/components/_workers.scss
@@ -1,6 +1,7 @@
 .workers-list {
   font-size: 16px;
   line-height: 1.18;
+
   @media screen and (min-width: 768px) {
     display: flex;
     flex-wrap: wrap;
@@ -9,6 +10,7 @@
 }
 
 .workers-list__item {
+  margin: 0 auto;
   max-width: 450px;
   max-height: 622px;
   height: 100%;
