--- a/sass/components/_works.scss
+++ b/sass/components/_works.scss
@@ -43,7 +43,7 @@
   top: 0;
   left: 0;
   @include flex(flex, center, center);
-  padding: 0 24px;
+
   @include size(100%, 100%);
   background-color: rgba(33, 150, 243, 0.9);
   transform: translateY(101%);
@@ -60,8 +60,15 @@
   margin: 0;
   font-size: 16px;
   line-height: 1.55;
+  padding: 0 24px;
   @media screen and (min-width: 480px) {
     font-size: 18px;
+  }
+  @media screen and (min-width: 768px) {
+    padding: 48px 24px;
+  }
+  @media screen and (min-width: 1200px) {
+    padding: 63px 24px;
   }
 }
 
