--- a/css/main.css
+++ b/css/main.css
@@ -885,7 +885,7 @@ ul {
 .works-list {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: normal;
   flex-wrap: wrap;
 }
 @media screen and (min-width: 768px) {
