--- a/sass/components/_works.scss
+++ b/sass/components/_works.scss
@@ -1,5 +1,5 @@
 .works-list {
-  @include flex(flex, center, center);
+  @include flex(flex, center);
   flex-wrap: wrap;
   @media screen and (min-width: 768px) {
     gap: 30px;
