--- a/sass/components/_works.scss
+++ b/sass/components/_works.scss
@@ -1,8 +1,9 @@
 .works-list {
-  @include flex(flex, center);
+  @include flex(flex, center, center);
   flex-wrap: wrap;
   @media screen and (min-width: 768px) {
     gap: 30px;
+    @include flex(flex, center);
   }
 }
 
